# fire

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  ca.crt  fly.toml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yml  fly.yml
migrations/: 20240824002452_init.sql
src/: db.rs  main.rs  query.rs  supa.rs
static/: output.css
supabase/: config.toml
supabase/migrations/: 20240824002452_init.sql  20240929102727_diff.sql
templates/: admin.html.tera  base.html.tera  button.html.tera  comments.html.tera  edit_comment.html.tera  index.html.tera  login.html.tera  macros.html.tera  reply_comment.html.tera  saved_comment.html.tera
