[package]
name = "fire"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
libsql = "0.5.0"
thiserror = "1.0.63"

[dependencies.serde]
version = "1.0.208"

[dependencies.rocket]
version = "0.5.1"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
