[package]
name = "fire"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
fuzzydate = "0.2.2"
libsql = "0.5.0"
serde_json = "1.0.127"
thiserror = "1.0.63"

[dependencies.postgrest]
version = "1.6.0"

[dependencies.reqwest]
features = ["json"]
version = "0.11.27"

[dependencies.serde]
version = "1.0.208"

[dependencies.rocket]
version = "0.5.1"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[profile.dev]
debug = 0
