[package]
name = "fire"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
chrono-humanize = "0.2.3"
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
postgrest = "1.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"



[dependencies.reqwest]
features = ["json"]
version = "0.11.27"



[dependencies.rocket]
version = "0.5.1"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[profile.dev]
debug = 0
